@@ -59,8 +59,8 @@ __CONSTANTS__
 use constant {
     _STATE_NONE           => 0,
     _STATE_INITIALIZING   => 1,
-    _STATE_INITIALIZED    => 2,
-    _STATE_AUTHENTICATING => 3,
+    _STATE_INITIALIZED    => 2, # Process transports: in/out pipes have been connected
+    _STATE_AUTHENTICATING => 3, # Process transports: failure to start is discovered in this state
     _STATE_AUTHENTICATED  => 4,
     _STATE_OPENING        => 5,
     _STATE_OPENED         => 6,
@@ -558,12 +558,13 @@ method _dispatch_stream(:$header, %args) {
     if ($_keepalive) {
         $_keepalive->mark_active;
     }
+
     if (my $stream = $_streams->{$header->{serial}}) {
         if ($args{error}) {
             return $stream->_dispatch_error($args{error});
         }
         else {
-            return $stream->_dispatch_receive($args{data}, $args{final});
+            return $stream->_dispatch_receive($args{data}, $args{hole}, $args{eof}, $args{final});
         }
     }
     else {
@@ -588,6 +589,7 @@ method register($r) {
 }
 
 async method run_once() {
+    return if $_eof;
     my ($len, $type) = $_transport->need;
     $log->trace( 'Reading data from connection' );
 
@@ -690,7 +692,7 @@ async method _dispatch_data( $f ) {
         $_selector->add( data => 'dispatch',
                          f    => $p );
     }
-    if (length($data) == 0 and $eof) {
+    if ($eof) {
         $_eof = 1;
         $log->info( 'EOF' );
         $_selector->add(
@@ -965,7 +967,10 @@ async method open() {
 # ENTRYPOINT: REMOTE_PROC_CONNECT_CLOSE
 # ENTRYPOINT: REMOTE_PROC_CONNECT_UNREGISTER_CLOSE_CALLBACK
 async method _close($reason) {
-    return unless (_STATE_INITIALIZED <= $_state and $_state <= _STATE_OPENED );
+    unless (_STATE_INITIALIZED <= $_state and $_state <= _STATE_OPENED) {
+        $_completed_f->done unless $_completed_f->is_ready;
+        return;
+    }
     $_state = _STATE_CLEANING_UP;
 
     unless ($_connection->is_read_eof
